# master-quest

./: .dockerignore  .gitignore  LICENSE  README.md  package-lock.json
api/: alembic.ini  pyproject.toml  wsgi.py
api/app/: __init__.py  extensions.py  healthz.py  routes.py
api/app/account/: __init__.py  routes.py
api/app/auth/: current_user.py  domain_types.py  errors.py  google_client.py  oauth2_client.py  routes.py  service.py  utils.py
api/app/domain/decorators/: decorator.py
api/app/domain/selectors/: __init__.py  authorship.py  membership.py
api/app/domain/validators/: __init__.py  validators.py
api/app/persistence/models/: __init__.py  activities.py  activity.py  attachments.py  boards.py  cards.py  comments.py  enums.py  invitations.py  labels.py  mixins.py  room.py  room_membership.py  rooms.py  users.py
api/app/persistence/orm/: __init__.py
api/app/persistence/orm/mixins/: __init__.py  mixins.py
api/app/persistence/orm/queries/: __init__.py  (+1 more)
api/app/routes/: __init__.py
api/app/routes/Room/: __init__.py  routes.py  services.py
api/app/security/: decorator.py  decorators.py  permissions.py  policy.py  roles.py
api/migrations/: env.py
api/migrations/versions/: 0e6b1987f301_initialize_tables.py  13efa1e4863e_create_tables_and_enums.py  5cfeb74a0bc6_create_tables_and_enums.py  73cfda514afd_initialize_tables.py  b9df84ad9bda_initialize_database.py  c5f9e8e7c06b_add_cards_table.py  d9a6e8a01d9d_remove_unique_board_per_room.py  e0a7d8f3c6aa_add_room_invites.py
api/src/: __init__.py  config.py  healthz.py
api/src/account/: routes.py
api/src/auth/: __init__.py  service.py
api/src/domain/decorators/: __init__.py  decorator.py
api/src/domain/exceptions/: __init__.py  base.py  http_exceptions.py
api/src/domain/security/: permissions.py
api/src/domain/selectors/: __init__.py  authorship.py  membership.py
api/src/domain/validators/: __init__.py  list_validators.py  number_validators.py  string_validators.py  user_validators.py  validators.py
api/src/persistence/models/: __init__.py  attachments.py  boards.py  cards.py  comments.py  invitations.py  invites.py  rooms.py  users.py
api/src/routes/: __init__.py
api/src/routes/auth/: __init__.py  auth_errors.py  current_user.py  domain_types.py  routes.py  service.py  utils.py
api/src/routes/board/: __init__.py  routes.py
api/src/routes/boards/: __init__.py  routes.py  services.py
api/src/routes/cards/: __init__.py  routes.py  services.py
api/src/routes/invites/: __init__.py  routes.py
api/src/routes/room/: __init__.py  routes.py  services.py
api/src/routes/rooms/: __init__.py  routes.py  services.py
api/src/routes/users/: __init__.py  routes.py
api/src/security/: decorator.py  permissions.py
api/tests/domain/validators/: test_validators.py
docs/: erd.puml
(+62 files in other folders)
