[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "master-quest-api"
version = "0.1.0"
description = "A kanban board that lets you attach interactive stories to kanban cards for better visualization of tasks."
authors = [
  { name = "Donnie Baker" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
  "flask>=3.0",
  "flask-session>=0.8",
  "gunicorn>=21.2",
  "psycopg[binary]>=3.2",   
  "sqlalchemy>=2.0",        
  "alembic>=1.13",
  "authlib>=1.3",
  "flask-sqlalchemy>=3.0",
  "pydantic>=2.11"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=24.0",
  "isort>=6.0",
  "flake8>=7.0",
  "mypy>=1.10"
]