[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masterquest-api"
version = "0.1.0"
description = "A kanban board that lets you attach interactive stories to kanban cards for better visualization of tasks."
authors = [
  { name = "Donnie Baker" }
]
# readme = { file = "README.md", content-type = "text/markdown" }
# license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
  "flask>=3.0",
  "flask-session>=0.8",
  "gunicorn>=21.2",
  "psycopg[binary]>=3.2",   
  "sqlalchemy>=2.0",        
  "alembic>=1.13",
  "authlib>=1.3",
  "requests>=2.30",
  "flask-sqlalchemy>=3.0",
  "pydantic>=2.11"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=24.0",
  "isort>=6.0",
  "flake8>=7.0",
  "mypy>=1.10"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
strict = true

[tool.flake8]
max-line-length = 88
extend-ignore = [
  "E203",  # whitespace before ':' (conflicts with Black)
  "W503",  # line break before binary operator (conflicts with Black)
]

[tool.setuptools.packages.find]
where = ["src"]